# prover9-rs

./: .gitignore  .gitmodules  Cargo.toml
.github/workflows/: maturin.yml
prover9-rs/: Cargo.toml
prover9-rs/src/: clause.rs  error.rs  prover.rs  raw.rs  rewrite.rs  term.rs  tests.rs
prover9-sys/: Cargo.toml  build.rs  wrapper.h
prover9-sys/src/: bindings.rs  shim.c
prover9/src/: lib.rs  literal.rs  parser.rs  rewrite.rs  runtime.rs  tests.rs  types.rs
pyprover9/: Cargo.toml  pyproject.toml
pyprover9/python/prover9/: __init__.py
pyprover9/src/: lib.rs
pyprover9/tests/: test_rewrites.py
