[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "prover9"
version = "0.1.0"
requires-python = ">=3.9"
description = "Python bindings for the high-level Rust prover9 crate"

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.maturin]
python-source = "python"
module-name = "prover9._prover9"

[tool.pytest.ini_options]
testpaths = ["tests"]
